--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
      <div class="main">
     {{>header}}
-    <p> Hello welcome to my weather website. <br>My self Shubham patel.<br>age 21</p>
+    <p> Hello welcome to my weather website. <br>My self Shubham patel.<br>age 21<br> it use data from weatherstack.com and mapquest.com</p>
      </div>
     {{>footer}}
 </body>
